Adapted klear configuration to 1.4

--- a/portals/application/configs/klear/DDIsList.yaml
+++ b/portals/application/configs/klear/DDIsList.yaml
@@ -191,8 +191,8 @@ production:
       enclosure: '"'
       escape: "\\"
       forcedValues:
-        company: ${auth.companyId}
-        brand: ${auth.brandId}
+        company: *forcedCompany
+        <<: *forcedBrand
 
   commands:
     importDDIsFreeUpload_command:
