--- a/portals/application/configs/klear/ExtensionsList.yaml
+++ b/portals/application/configs/klear/ExtensionsList.yaml
@@ -117,7 +117,7 @@ production:
       enclosure: '"'
       escape: "\\"
       forcedValues:
-        company: ${auth.companyId}
+        company: *forcedCompany
 
   commands:
     importExtensionsFreeUpload_command:
