--- a/portals/application/configs/klear/TargetPatternsList.yaml
+++ b/portals/application/configs/klear/TargetPatternsList.yaml
@@ -134,7 +134,7 @@ production:
       enclosure: '"'
       escape: "\\"
       forcedValues:
-        brandId: ${auth.brandId}
+        <<: *forcedBrand
 
   #PricingPlans:
     <<: *pricingPlans_dialogsLink 
