--- a/portals/application/configs/klear/TerminalsList.yaml
+++ b/portals/application/configs/klear/TerminalsList.yaml
@@ -153,7 +153,7 @@ production:
       enclosure: '"'
       escape: "\\"
       forcedValues:
-        companyId: ${auth.companyId}
+        companyId: *forcedCompany
 
   commands:
     importTerminalsFreeUpload_command:
