--- a/portals/application/configs/klear/UsersList.yaml
+++ b/portals/application/configs/klear/UsersList.yaml
@@ -258,7 +258,8 @@ production:
       enclosure: '"'
       escape: "\\"
       forcedValues:
-        company: ${auth.companyId}
+        company: *forcedCompany
+
 
 
     #HuntGroupsRelUsers
