--- a/portals/application/configs/klear/CompaniesList.yaml
+++ b/portals/application/configs/klear/CompaniesList.yaml
@@ -301,7 +301,7 @@ production:
       enclosure: '"'
       escape: "\\"
       forcedValues:
-        brand: ${auth.brandId}
+        <<: *forcedBrand
 
     # pricingPlansRelCompanies dialogs:
     <<: *pricingPlansRelCompanies_dialogsLink
