--- a/portals/application/configs/klear/RetailClientsList.yaml
+++ b/portals/application/configs/klear/RetailClientsList.yaml
@@ -303,7 +303,7 @@ production:
       enclosure: '"'
       escape: "\\"
       forcedValues:
-        brandId: ${auth.brandId}
+        <<: *forcedBrand
 
     # pricingPlansRelCompanies dialogs:
     <<: *pricingPlansRelCompanies_dialogsLink
