--- a/portals/application/configs/klear/conf.d/mapperList.yaml
+++ b/portals/application/configs/klear/conf.d/mapperList.yaml
@@ -54,6 +54,8 @@ mappers:
   - &MatchLists {mapper: \IvozProvider\Mapper\Sql\MatchLists, modelFile: MatchLists}
   - &MediaRelaySets {mapper: \IvozProvider\Mapper\Sql\MediaRelaySets, modelFile: MediaRelaySets}
   - &MusicOnHold {mapper: \IvozProvider\Mapper\Sql\MusicOnHold, modelFile: MusicOnHold}
+  - &OutgoingDDIRules {mapper: \IvozProvider\Mapper\Sql\OutgoingDDIRules, modelFile: OutgoingDDIRules}
+  - &OutgoingDDIRulesPatterns {mapper: \IvozProvider\Mapper\Sql\OutgoingDDIRulesPatterns, modelFile: OutgoingDDIRulesPatterns}
   - &OutgoingRouting {mapper: \IvozProvider\Mapper\Sql\OutgoingRouting, modelFile: OutgoingRouting}
   - &ParsedCDRs {mapper: \IvozProvider\Mapper\Sql\ParsedCDRs, modelFile: ParsedCDRs}
   - &ParsedCDRsGod {mapper: \IvozProvider\Mapper\Sql\ParsedCDRs, modelFile: ParsedCDRsGod}
