--- a/portals/application/configs/klear/klear.yaml
+++ b/portals/application/configs/klear/klear.yaml
@@ -229,6 +229,11 @@ production:
           title: ngettext('DDI', 'DDIs', 0)
           class: ui-silk-lightning-go
           description: _("List of %s", ngettext('DDI', 'DDIs', 0))
+        OutgoingDDIRulesList:
+          title: ngettext('Outgoing DDI Rule', 'Outgoing DDI Rules', 0)
+          class: ui-silk-script-lightning
+          description: _("List of %s", ngettext('Outgoing DDI Rule', 'Outgoing DDI Rules', 0))
+          showOnlyIf: ${auth.companyVPBX}
         ExternalCallFiltersList:
           title: ngettext('External call filter', 'External call filters', 0)
           class: ui-silk-arrow-branch
