--- a/portals/application/configs/klear/model/Users.yaml
+++ b/portals/application/configs/klear/model/Users.yaml
@@ -112,6 +112,26 @@ production:
             template: '+%DDIE164%'
           order: DDIE164
         'null': _("Company's default")
+    outgoingDDIRuleId:
+      title: _('Outgoing DDI Rules')
+      type: select
+      source:
+        data: mapper
+        config:
+          mapperName: \IvozProvider\Mapper\Sql\OutgoingDDIRules
+          filterClass: IvozProvider_Klear_Filter_Company
+          fieldName:
+            fields:
+              - name
+            template: '%name%'
+          order: name
+        'null': _("Company's default")
+      info:
+        type: box
+        position: left
+        icon: help
+        text: _("Rules to manipulate outgoingDDI when user directly calls to external numbers.")
+        label: _("Need help?")
     callACLId:
       title: _('Call ACL')
       type: select
@@ -321,20 +341,20 @@ production:
             template: '%name%'
           order: name
         'null': _("Company's default")
-    externalIpCalls: 
+    externalIpCalls:
       title: _('Calls from non-granted IPs')
       type: select
       defaultValue: 0
-      source: 
+      source:
         data: inline
-        values: 
-          '0': 
+        values:
+          '0':
             title: _("None")
-          '1': 
+          '1':
             title: "1"
-          '2': 
+          '2':
             title: "2"
-          '3': 
+          '3':
             title: "3"
       info:
         type: box
