--- a/portals/application/configs/klear/CompaniesList.yaml
+++ b/portals/application/configs/klear/CompaniesList.yaml
@@ -101,11 +101,9 @@ production:
           country: true
           onDemandRecord: true
           onDemandRecordCode: true
-          ipFilter: true
           mediaRelaySetsId: true
           outbound_prefix: true
           applicationServerId: true
-          externalMaxCalls: true
           countryId: true
           areaCode: true
           outgoingDDIId: true
@@ -115,6 +113,29 @@ production:
           recordingsLimitMB: true
           recordingsLimitEmail: true
           recordingsDiskUsage: true
+        order: &companiesOrder_Link
+          id: true
+          name: true
+          externalMaxCalls: true
+          defaultTimezoneId: true
+          outbound_prefix: true
+          postalAddress: true
+          recordingsLimitMB: true
+          externallyExtraOpts: true
+      fixedPositions:
+        group0:
+          colsPerRow: 12
+          label: _("Basic data")
+          fields:
+            name: 4
+            domain_users: 5
+            FeaturesRelCompanies: 2
+        group1:
+          colsPerRow: 2
+          label: _("Security")
+          fields:
+            externalMaxCalls: 1
+            ipFilter: 1
       class: ui-silk-add
       label: true
       multiInstance: true
@@ -144,6 +165,8 @@ production:
           country: ${auth.brand.invoices.disabled}
         whitelist:
           id: ${auth.isMainOperator}
+        order:
+          <<: *companiesOrder_Link
       class: ui-silk-pencil
       label: false
       title: _("Edit %s %2s", ngettext('Company', 'Companies', 1), "[format| (%item%)]")
@@ -151,32 +174,36 @@ production:
         <<: *forcedBrand
       fixedPositions: &companiesFixedPositions_Link
         group0:
-          colsPerRow: 2
+          colsPerRow: 12
           label: _("Basic data")
           fields:
-            name: 1
-            nif: 1
-            FeaturesRelCompanies: 1
+            name: 4
+            nif: 4
+            domain_users: 5
+            FeaturesRelCompanies: 2
         group1:
+          colsPerRow: 2
+          label: _("Security")
+          fields:
+            externalMaxCalls: 1
+            ipFilter: 1
+        group2:
           colsPerRow: 2
           label: _("Locales")
           fields:
             defaultTimezoneId: 1
             languageId: 1
-        group2:
+        group3:
           colsPerRow: 2
           label: _("Server data")
           fields:
             outbound_prefix: 1
             outgoingDDIId: 1
-            externalMaxCalls: 1
-            domain_users: 1
             countryId: 1
             areaCode: 1
             mediaRelaySetsId: 1
             applicationServerId: 1
-            ipFilter: 1
-        group3:
+        group4:
           colsPerRow: 2
           label: _("Invoice data")
           fields:
@@ -186,7 +213,7 @@ production:
             province: 1
             country: 1
             registryData: 2
-        group4:
+        group5:
           colsPerRow: 12
           label: _("Recordings")
           collapsed: true
@@ -197,7 +224,7 @@ production:
             __empty1: 6
             onDemandRecord: 6
             onDemandRecordCode: 6
-        group5:
+        group6:
           colsPerRow: 1
           collapsed: true
           label: _("Externally rated options")
